
  CHANGES SINCE 1.2
=====================
